--- a/app/src/main/res/layout/item_recent.xml
+++ b/app/src/main/res/layout/item_recent.xml
@@ -1,58 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             xmlns:tools="http://schemas.android.com/tools">
+<layout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.card.MaterialCardView
-            android:layout_width="199dp"
-            android:layout_height="169dp"
-            app:cardCornerRadius="24dp"
-            android:backgroundTint="@color/color_9b9_green">
+    <FrameLayout android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:padding="10dp"
+    >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        <com.google.android.material.card.MaterialCardView
+                android:layout_width="199dp"
+                android:layout_height="169dp"
+                app:cardCornerRadius="24dp"
+                android:backgroundTint="@color/color_9b9_green">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
 
-            <ImageView
-                    android:id="@+id/image_view"
-                    android:layout_width="110dp"
-                    android:layout_height="140dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:src="@drawable/recent_img_one"
-            />
+                <ImageView
+                        android:id="@+id/image_view"
+                        android:layout_width="110dp"
+                        android:layout_height="140dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:src="@drawable/recent_img_one"
+                />
 
-            <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tv_flash_card"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Flash Card"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginTop="30dp"
-                    android:textSize="20sp"
-                    android:layout_marginStart="10dp"
-                    android:fontFamily="@font/gilroy_regular"
-                    android:textColor="@color/color_white"
-                    app:layout_constraintStart_toEndOf="@id/image_view"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/image_view"/>
+                <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/tv_flash_card"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Flash Card"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginTop="30dp"
+                        android:textSize="20sp"
+                        android:layout_marginStart="10dp"
+                        android:fontFamily="@font/gilroy_regular"
+                        android:textColor="@color/color_white"
+                        app:layout_constraintStart_toEndOf="@id/image_view"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/image_view"/>
 
-            <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tv_desc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    app:layout_constraintTop_toBottomOf="@id/tv_flash_card"
-                    app:layout_constraintEnd_toEndOf="@id/tv_flash_card"
-                    app:layout_constraintStart_toEndOf="@id/image_view"
-                    android:text="This is a paragraph \nexplaining what\nbenefit."/>
+                <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/tv_desc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        app:layout_constraintTop_toBottomOf="@id/tv_flash_card"
+                        app:layout_constraintEnd_toEndOf="@id/tv_flash_card"
+                        app:layout_constraintStart_toEndOf="@id/image_view"
+                        android:text="This is a paragraph \nexplaining what\nbenefit."/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </com.google.android.material.card.MaterialCardView>
-</FrameLayout>
+        </com.google.android.material.card.MaterialCardView>
+    </FrameLayout>
+
+</layout>
+
