update: moved to jetpack navigation library fixed bugs
Took 6 hours 14 minutes

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,22 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-            android:id="@+id/nav_home"
+            android:id="@+id/homeFragment"
             android:title="Home"
             android:icon="@drawable/ic_home_selector"/>
 
     <item
-            android:id="@+id/nav_community"
+            android:id="@+id/communityFragment"
             android:title="Community"
             android:icon="@drawable/ic_community_selector"/>
 
     <item
-            android:id="@+id/nav_inbox"
+            android:id="@+id/inboxFragment"
             android:title="Inbox"
             android:icon="@drawable/ic_inbox_selector"/>
 
     <item
-            android:id="@+id/nav_profile"
+            android:id="@+id/profileFragment"
             android:title="Profile"
             android:icon="@drawable/ic_profile_selector"/>
 
