--- a/app/src/main/res/layout/item_recent.xml
+++ b/app/src/main/res/layout/item_recent.xml
@@ -20,24 +20,24 @@
                     android:layout_height="match_parent">
 
 
-                <ImageView
+                <com.google.android.material.imageview.ShapeableImageView
                         android:id="@+id/image_view"
-                        android:layout_width="110dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="140dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         android:src="@drawable/recent_img_one"
+                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize10Percent"
                 />
 
                 <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/tv_flash_card"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Flash Card"
                         android:layout_marginEnd="20dp"
                         android:layout_marginTop="30dp"
                         android:textSize="20sp"
-                        android:layout_marginStart="10dp"
                         android:fontFamily="@font/gilroy_regular"
                         android:textColor="@color/color_white"
                         app:layout_constraintStart_toEndOf="@id/image_view"
@@ -49,10 +49,9 @@
                         android:id="@+id/tv_desc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginEnd="20dp"
                         app:layout_constraintTop_toBottomOf="@id/tv_flash_card"
-                        app:layout_constraintEnd_toEndOf="@id/tv_flash_card"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/image_view"
                         android:text="This is a paragraph \nexplaining what\nbenefit."/>
 
