--- a/app/src/main/res/layout/item_recent.xml
+++ b/app/src/main/res/layout/item_recent.xml
@@ -4,15 +4,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
 
-    <FrameLayout android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:padding="10dp"
-    >
-
         <com.google.android.material.card.MaterialCardView
                 android:layout_width="199dp"
                 android:layout_height="169dp"
                 app:cardCornerRadius="24dp"
+                android:padding="10dp"
                 android:backgroundTint="@color/color_9b9_green">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,7 +23,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         android:src="@drawable/recent_img_one"
-                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize10Percent"
+                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize10PercentBottom"
                 />
 
                 <com.google.android.material.textview.MaterialTextView
@@ -58,7 +54,6 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.card.MaterialCardView>
-    </FrameLayout>
 
 </layout>
 
