--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,8 +44,12 @@
         <item name="android:textColor">@color/color_black</item>
     </style>
     
-    <style name="ShapeAppearanceOverlay.CornerSize10Percent" parent="">
+    <style name="ShapeAppearanceOverlay.CornerSize10PercentBottom" parent="">
         <item name="cornerSizeBottomLeft">24dp</item>
+    </style>
+
+    <style name="ShapeAppearanceOverlay.CornerSize10Percent" parent="">
+        <item name="cornerSize">24dp</item>
     </style>
 
 </resources>
