--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,4 +48,9 @@
         <item name="cornerSizeBottomLeft">24dp</item>
     </style>
 
+    <style name="ShapeAppearanceOverlay.CornerSizeAll" parent="">
+        <item name="cornerSize">24dp</item>
+        <item name="cornerFamily">rounded</item>
+    </style>
+
 </resources>
