--- a/app/src/main/res/layout/fragment_appearance.xml
+++ b/app/src/main/res/layout/fragment_appearance.xml
@@ -16,12 +16,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:src="@drawable/ic_arrow_back"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_appearance_heading"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_resources_heading"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_appearance_heading" />
+            app:layout_constraintTop_toTopOf="@+id/tv_resources_heading" />
 
         <TextView
-            android:id="@+id/tv_appearance_heading"
+            android:id="@+id/tv_resources_heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
@@ -42,7 +42,7 @@
             android:layout_marginTop="45dp"
             android:src="@drawable/img_white_bg"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_appearance_heading" />
+            app:layout_constraintTop_toBottomOf="@id/tv_resources_heading" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="25dp"
