--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,4 +52,9 @@
         <item name="cornerSize">24dp</item>
     </style>
 
+    <style name="ShapeAppearanceOverlay.CornerSizeRightBottomTop">
+        <item name="android:bottomRightRadius">12dp</item>
+        <item name="android:topRightRadius">12dp</item>
+    </style>
+
 </resources>
